# Expressa

./: README.md  build.gradle.kts  gradlew  settings.gradle.kts
baselineProfile/: build.gradle.kts
baselineProfile/src/main/java/com/kyant/expressa/baselineprofile/: BaselineProfileGenerator.kt  StartupBenchmarks.kt
catalog/: build.gradle.kts  proguard-rules.pro
catalog/release/: app-release.apk  catalog-release.apk  output-metadata.json
catalog/release/baselineProfiles/0/: app-release.dm  catalog-release.dm
catalog/release/baselineProfiles/1/: app-release.dm  catalog-release.dm
catalog/src/androidTest/java/com/kyant/expressa/catalog/: ExampleInstrumentedTest.kt
catalog/src/main/: AndroidManifest.xml
catalog/src/main/java/com/kyant/expressa/catalog/: Catalog.kt  CatalogApp.kt  MainActivity.kt  NavContent.kt  Routes.kt
catalog/src/main/res/values/: attrs.xml  strings.xml  themes.xml
catalog/src/test/java/com/kyant/expressa/catalog/: ExampleUnitTest.kt
expressa/: build.gradle.kts  compose-stability.config
expressa-components/: .gitignore  build.gradle.kts
expressa-components/src/androidTest/java/com/kyant/expressa/components/: ExampleInstrumentedTest.kt
expressa-components/src/test/java/com/kyant/expressa/components/: ExampleUnitTest.kt
expressa-core/: .gitignore  build.gradle.kts  compose-stability.config
expressa-core/src/main/cpp/: CMakeLists.txt  lib.c  mcu_rs.h
expressa-core/src/main/java/com/kyant/expressa/: InlineClassHelper.kt
expressa-core/src/main/java/com/kyant/expressa/graphics/: Hct.kt
expressa-core/src/main/java/com/kyant/expressa/interaction/: InteractionState.kt  StateHolder.kt
expressa/src/androidTest/java/com/kyant/expressa/: ExampleInstrumentedTest.kt
expressa/src/test/java/com/kyant/expressa/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+132 files in other folders)
